892.	[func]		sar
	A class, LeaseFileStats, has been added to provide simple
	statistics for use with lease files.  Also added logging
	to the kea-lfc process per the design.
	See http://kea.isc.org/wiki/LFCDesign for the design.
	(Trac #3667, git 7f36e034fe79d85f317d7d07e2fe636d6cdf1f6e)

891.	[func]		tomek
	libdhcpsrv: Allocation Engine now uses statically assigned
	addresses when processing DHCPv6 renewals.
	(Trac #3677, git 9ce50790c91624937ff2b622e4afff36d5d3cc2d)

890.	[func]		marcin
	It is now possible to specify whether the DHCPv4 server
	should use raw sockets or IP/UDP datagram sockets to
	receive and send DHCP messages. The configuration format
	has been changed for the selection of interfaces on which
	the DHCPv4 and DHCPv6 servers should listen. The
	configuration files using an old format are incompatible
	with the latest version of Kea.
	(Trac #3604, git c726bbc4eae0f576f6791c7490bfba8c30a401d9)

889.	[bug]		marcin
	Resolved a bug in the DHCPv4 allocation engine whereby the
	client could request and obtain an address reserved for
	another client.
	(Trac #3690, git 1afa4e24b0fcdd6d3a2e596663ce1102ffe2340d)

888.	[func]		marcin
	DHCPv4 and DHCPv6 servers launch the kea-lfc program, according
	to the value of lfc-interval configuration parameter for the
	Memfile lease database backend.
	(Trac #3669, git c92665ce05d71e9e5cad9a0679018e9e3f7e3be5)

887.	[func]		sar
	A new process, kea-lfc, has been added. It is meant to
	be periodically executed by the DHCPv4 and DHCPv6 servers
	to remove redundant information from the lease files.
	See http://kea.isc.org/wiki/LFCDesign for the design.
	(Trac #3664, git cc85938b35e2d4bd00ccb74f1b83d3017ab0e41b)
	(Trac #3665, git b1707981f48b13895b50bf27176dede866576292)
	(Trac #3687, git 1e92382aaa2fbff08bbf1d6bbf0add195a7b6fae)

886.	[func]		tomek
	libdhcpsrv: Allocation Engine now uses statically assigned
	addresses when it allocates leases for the DHCPv6 clients.